umol-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@ketcher_Custom-expected.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: results
---
expected_category: invalid
category: invalid
molecule:
  success: false
  error:
    error_type: UnexpectedEof
    message: Unexpected end of file in header block at line 0
molecule_lenient:
  success: false
  error:
    error_type: UnexpectedEof
    message: Unexpected end of file in header block at line 0
extended_molecule:
  success: false
  error:
    error_type: UnexpectedEof
    message: Unexpected end of file in header block at line 0
extended_molecule_lenient:
  success: false
  error:
    error_type: UnexpectedEof
    message: Unexpected end of file in header block at line 0
